--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "jest": {
-    "verbose": true
+    "verbose": true,
+    "setupFilesAfterEnv": [
+      "jest-allure/dist/setup"
+    ]
   },
   "scripts": {
     "test": "jest --detectOpenHandles"
@@ -25,11 +28,13 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.15.0",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
+    "allure-commandline": "^2.13.8",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
+    "jest-allure": "^0.1.3",
     "puppeteer": "^10.2.0"
-  },
-  "dependencies": {}
+  }
 }
