--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "url": "https://github.com/GonzaloQ11/PuppeteerFramework/issues"
   },
   "homepage": "https://github.com/GonzaloQ11/PuppeteerFramework#readme",
+  "dependencies": {
+    "puppeteer": "^10.2.0",
+    "jest": "^27.0.6",
+    "jest-allure": "^0.1.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.15.0",
@@ -27,8 +32,10 @@
     "allure-commandline": "^2.13.8",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
-    "jest": "^27.0.6",
-    "jest-allure": "^0.1.3",
-    "puppeteer": "^10.2.0"
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
