--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/GonzaloQ11/PuppeteerFramework#readme",
   "dependencies": {
-    "puppeteer": "^10.2.0",
+    "dotenv": "^10.0.0",
     "jest": "^27.0.6",
-    "jest-allure": "^0.1.3"
+    "puppeteer": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "testrail-api": "^1.3.6"
+    "testrail-api": "^1.3.6",
+    "jest-allure": "^0.1.3"
   }
 }
